{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 30,
  "lineage": "0f7280e8-5577-9681-c210-8fb55e38a746",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_alb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:168765413198:loadbalancer/app/nextjs-fargate-demo-alb/5a6ab3b226555e2d",
            "arn_suffix": "app/nextjs-fargate-demo-alb/5a6ab3b226555e2d",
            "dns_name": "nextjs-fargate-demo-alb-2062308559.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:168765413198:loadbalancer/app/nextjs-fargate-demo-alb/5a6ab3b226555e2d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nextjs-fargate-demo-alb",
            "security_groups": [
              "sg-0519cd2bc7ad05005"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-029c22d04d9dada97"
              },
              {
                "subnet_id": "subnet-0734a12c1cbe00ad1"
              }
            ],
            "subnets": [
              "subnet-029c22d04d9dada97",
              "subnet-0734a12c1cbe00ad1"
            ],
            "vpc_id": "vpc-0e7350d723d08b3bd",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.terraform_remote_state.networking",
            "module.compute.aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:168765413198:listener/app/nextjs-fargate-demo-alb/5a6ab3b226555e2d/44cd0aaa51b6144b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:168765413198:targetgroup/nextjs-fargate-demo-app-target/36d5bd2ad0c5c0ba",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:168765413198:listener/app/nextjs-fargate-demo-alb/5a6ab3b226555e2d/44cd0aaa51b6144b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:168765413198:loadbalancer/app/nextjs-fargate-demo-alb/5a6ab3b226555e2d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "data.terraform_remote_state.networking",
            "module.compute.aws_alb.app",
            "module.compute.aws_alb_target_group.app",
            "module.compute.aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:168765413198:targetgroup/nextjs-fargate-demo-app-target/36d5bd2ad0c5c0ba",
            "arn_suffix": "targetgroup/nextjs-fargate-demo-app-target/36d5bd2ad0c5c0ba",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:168765413198:targetgroup/nextjs-fargate-demo-app-target/36d5bd2ad0c5c0ba",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nextjs-fargate-demo-app-target",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e7350d723d08b3bd"
          },
          "dependencies": [
            "data.terraform_remote_state.networking"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168765413198:security-group/sg-04f1b806f837ea3af",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f1b806f837ea3af",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0519cd2bc7ad05005"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "nextjs-fargate-demo-sg",
            "name_prefix": "",
            "owner_id": "168765413198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Service": "nextjs-fargate-demo",
              "Source": "terraform",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7350d723d08b3bd"
          },
          "dependencies": [
            "data.terraform_remote_state.networking",
            "module.compute.aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168765413198:security-group/sg-0519cd2bc7ad05005",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0519cd2bc7ad05005",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nextjs-fargate-demo-lb-sg",
            "name_prefix": "",
            "owner_id": "168765413198",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0e7350d723d08b3bd"
          },
          "dependencies": [
            "data.terraform_remote_state.networking"
          ]
        }
      ]
    }
  ]
}